<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".ui.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:background="@null">
            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/save"
                android:paddingStart="10dp"
                android:layout_gravity="end"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:onClick="saveClicked"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--    <View-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_marginTop="10sp"-->
        <!--        android:layout_height="1dp"-->
        <!--        android:background="#000"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_package"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_uri"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/uri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recording_time"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:textSize="18dp"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/round_button">


                    <EditText
                        android:id="@+id/play_back_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:textColorHint="@color/white"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/seconds"
                        android:textSize="18dp"
                        android:textColor="@color/black"/>
                    </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kill_process"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:textSize="18dp"
                    android:textColor="@color/white"/>

                <Switch
                    android:id="@+id/kill_process"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/round_button"
                    android:thumbTint="@color/colorAccent"
                    android:trackTint="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_record"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:textSize="18dp"
                    android:textColor="@color/white"/>

                <Switch
                    android:id="@+id/auto_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/round_button"
                    android:thumbTint="@color/colorAccent"
                    android:trackTint="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/one_app_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:backgroundTint="#62FFFFFF"
                android:background="@drawable/round_button"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_to_record"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center|start"/>

                <Spinner
                    android:id="@+id/app_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="mySpinnerItemStyle"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/auto_record_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/interation"
                        android:textSize="18dp"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/iteration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:background="@drawable/round_button"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/interation"
                        android:textColorHint="@color/white"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <ListView
                    android:id="@+id/appSelectionListView"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/custom_list_item_app_select"/>
            </LinearLayout>
        </LinearLayout>
<!--    </ScrollView>-->
</LinearLayout>